[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/style_preset_panel_file_dialog_popup_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/save_file_ui_element.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/game_meta_load_dialog.gd" type="Script" id=3]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/anim_popup_panel_fly_out.tres" type="Animation" id=4]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/style_preset_divider_file_dialog_popup.tres" type="StyleBox" id=5]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/font_preset_new_save_file_button.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/style_preset_button_save_file_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/style_preset_button_save_file_normal.tres" type="StyleBox" id=8]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/style_preset_button_save_file_pressed.tres" type="StyleBox" id=9]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/style_preset_button_save_file_focus.tres" type="StyleBox" id=10]
[ext_resource path="res://src/runtime/state_game_meta/game_file_load_dialog/style_preset_button_file_disabled.tres" type="StyleBox" id=11]

[sub_resource type="Theme" id=1]

[node name="GameFileLoadDialog" type="CenterContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = 460.0
margin_top = 40.0
margin_right = 1460.0
margin_bottom = 1040.0
rect_min_size = Vector2( 1000, 1000 )
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )

[node name="PopupAnimator" type="AnimationPlayer" parent="Panel"]
anims/panel_fly_out = ExtResource( 4 )

[node name="Margin" type="MarginContainer" parent="Panel"]
margin_left = 15.0
margin_top = 15.0
margin_right = 985.0
margin_bottom = 985.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Margin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 945.0
margin_bottom = 945.0
mouse_filter = 2
size_flags_horizontal = 7
follow_focus = true

[node name="SaveFileContainer" type="VBoxContainer" parent="Panel/Margin/ScrollContainer"]
margin_right = 920.0
margin_bottom = 920.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="NewSaveFile" type="Button" parent="Panel/Margin/ScrollContainer/SaveFileContainer"]
margin_left = 210.0
margin_right = 710.0
margin_bottom = 125.0
rect_min_size = Vector2( 500, 125 )
size_flags_horizontal = 4
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 8 )
text = "Create New Save File"

[node name="HSeparator" type="HSeparator" parent="Panel/Margin/ScrollContainer/SaveFileContainer"]
margin_top = 130.0
margin_right = 920.0
margin_bottom = 180.0
mouse_filter = 2
custom_constants/separation = 50
custom_styles/separator = ExtResource( 5 )

[node name="SaveFileElement" parent="Panel/Margin/ScrollContainer/SaveFileContainer" instance=ExtResource( 2 )]
margin_top = 185.0
margin_right = 920.0
margin_bottom = 334.0

[connection signal="pressed" from="Panel/Margin/ScrollContainer/SaveFileContainer/NewSaveFile" to="." method="_on_game_file_dialog_start_new_save_file"]
